--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: "Lato", sans-serif;;
+    font-family: "Lato", sans-serif;
+    ;
 }
-.nav-div{
-    position: relative;
+
+.nav-div {
+    position: sticky;
+    width: 100%;
+    z-index: 1;
+    top: 0;
     background-color: black;
     color: white;
-    /* padding: 3px;   */
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
-ul li{
+
+ul li {
     display: inline-block;
     margin: 0px 20px 0px 15px;
-    padding: 15px 15px;
+    padding: 15px 20px;
     font-size: 1.1rem;
 }
-ul li:hover{
+
+ul li:hover {
     background-color: darkgrey;
     cursor: pointer;
+    transition: all 0.5s;
 }
-.img-div{
+
+.img-div {
     background-image: url("./Images/la.jpg");
     background-size: cover;
     width: 100%;
@@ -28,54 +36,209 @@ ul li:hover{
     text-align: center;
     color: darkgray;
 }
-.img-div h3{
+
+.img-div h3 {
     position: relative;
     top: 85%;
     width: 100%;
     font-weight: 400;
     font-size: 2rem;
 }
-.img-div p{
+
+.img-div p {
     position: relative;
     top: 87%;
     font-weight: bold;
     letter-spacing: 0.5px;
 }
-.the-band{
+
+.the-band {
     width: 70%;
     margin: 70px auto;
     height: 350px;
     text-align: center;
 
 }
-.the-band h3{
+
+.the-band h3 {
     font-size: 2rem;
     font-weight: normal;
     word-spacing: 5px;
     letter-spacing: 3px;
 }
-.the-band p{
+
+.the-band p.disc {
     margin-top: 35px;
     width: 80%;
     text-align: justify;
     line-height: 1.5rem;
-    margin: 35px auto;
+    margin: 30px auto;
     font-weight: 500;
     font-size: 0.9rem;
     /* word-spacing: 0.3rem; */
     letter-spacing: 1px;
 }
-.the-band p.love{
+
+.the-band p.love {
     color: darkgrey;
     letter-spacing: 2px;
     font-size: 0.85rem;
     text-align: center;
     font-style: italic;
 }
-.card-div{
+
+.card-div {
     display: flex;
-    justify-content: space-evenly;
-    width: 80%;
+    justify-content: space-between;
+    width: 50%;
     margin: 10px auto;
-    
+
+}
+
+.card-div p {
+    text-align: center;
+    font-size: 0.90rem;
+}
+
+.card-div img {
+    width: 150px;
+    border-radius: 5px;
+}
+
+.tour-div {
+    width: 100%;
+    margin-top: 5rem;
+    height: 700px;
+    text-align: center;
+    padding-top: 4rem;
+    color: white;
+    background-color: black;
+}
+
+.tour-div h3 {
+    font-size: 1.6rem;
+    font-weight: lighter;
+    letter-spacing: 2px;
+    word-spacing: 5px;
+}
+
+.tour-div p {
+    color: darkgrey;
+    letter-spacing: 1px;
+    margin-top: 35px;
+    word-spacing: 0.2px;
+    font-size: 0.85rem;
+    text-align: center;
+    font-style: italic;
+}
+
+ul.tickets {
+    margin-top: 55px;
+    width: 60%;
+    margin: 0px auto;
+    margin-top: 15px;
+}
+
+ul.tickets li {
+    display: block;
+    padding: 13px;
+    border-bottom: 1px solid grey;
+    background-color: white;
+    color: rgb(96, 96, 96);
+    text-align: justify;
+    font-size: 1rem;
+    cursor: auto;
+    margin: 0;
+}
+
+li span {
+    background-color: rgba(255, 0, 0, 0.7);
+    color: white;
+    margin-left: 5px;
+    font-size: 0.9rem;
+    padding: 4px 6px;
+}
+
+li p {
+    font-size: 1.2rem;
+    display: inline;
+    position: relative;
+    left: 83%;
+    color: white;
+    background-color: black;
+    border-radius: 50%;
+    padding: 5px 8px;
+}
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+    margin: 25px auto;
+
+
+
+
+}
+
+.card {
+    text-align: justify;
+    width: 250px;
+    background-color: white;
+    color: black;
+
+
+}
+
+.card img {
+    width: 100%;
+}
+
+.card p {
+    color: black;
+    margin-top: 5px;
+    padding-left: 10px;
+    font-style: normal;
+    text-align: justify;
+}
+
+.card p.city {
+    font-size: 0.9rem;
+    margin: 10px 0 10px 5px;
+    font-weight: bold;
+}
+
+.card p.date {
+    font-size: 0.9rem;
+    color: gray;
+    margin: 10px 0 10px 5px;
+}
+
+.card p.para2 {
+    font-size: 0.8rem;
+    width: 80%;
+    margin: 10px 0 10px 5px;
+}
+
+.card button {
+    padding: 8px 16px;
+    margin: 10px 0 10px 15px;
+    color: white;
+    background-color: black;
+    border: none;
+
+
+}
+
+.card button:hover {
+    background-color: darkslategrey;
+    cursor: pointer;
+}
+.contact{
+    width: 100%;
+    height: 450px;
+}
+.contact-info h3{
+
 }
